--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.password=root
 
 #config railway
-spring.datasource.url=mysql://root:GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE@monorail.proxy.rlwy.net:56457/railway
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:56457/railway
 spring.datasource.username=root
 spring.datasource.password=GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE
 
