--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ server.servlet.context-path=/
 
 #database
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/rental_system_db
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/rental_system_db
+spring.datasource.username=root
+spring.datasource.password=root
 
 #config railway
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:56457/railway
-spring.datasource.username=root
-spring.datasource.password=GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE
+#spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:56457/railway
+#spring.datasource.username=root
+#spring.datasource.password=GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -48,7 +48,7 @@ spring.main.allow-circular-references = true
 mail.debug=false
 
 #sms setting
-twilio.account_sid: AC510d34fe4bb21276d02edbfcd286012e
-twilio.auth_token: 0ed3bf31f2435f9cabcfc293afe1fd58
-twilio.trial_number: +12673949478
+twilio.account_sid: ACd6311992bcdd180e8cb825fdc01bcf4f
+twilio.auth_token: 7f6a560ef163ef8cbfb836690c37d15a
+twilio.trial_number: +14129618708
 security.sms.expiration = 120000
