--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.application.name=rental_system_api
 server.servlet.context-path=/
 
 #database
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rental_system_db
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/rental_system_db
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 #config railway
-#spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:56457/railway
-#spring.datasource.username=root
-#spring.datasource.password=GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:56457/railway
+spring.datasource.username=root
+spring.datasource.password=GA1GA5-HfdcbbgchEdf12cfgDCdCd1dE
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
